// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> Should render <LoggedInLinks /> if user is logged in 1`] = `
<DocumentFragment>
  <header
    class="sc-bdfBwQ btxKQt"
  >
    <a
      data-testid="Navbar-header-link"
    >
      <header
        class="header"
      >
        <img
          alt="E-Shopping"
          class="logo"
          src="logo.png"
        />
        <h1
          class="sc-gsTCUz gJcZNp heading"
        >
          shopping
        </h1>
      </header>
    </a>
    <form
      class="sc-dlfnbm cjBYFJ"
    >
      <input
        autocomplete="off"
        class="name-input"
        maxlength="150"
        name="product"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        class="sc-hKgILt fbPnWM"
        color="blue"
        type="submit"
      >
        search
      </button>
    </form>
    <nav
      class="sc-crrsfI btxiNp"
    >
      <a
        class="sc-kEjbxe dWwZfv"
        data-testid="CartLink"
      >
        <div
          class="sc-fubCfw bzVjbi"
          color=""
        >
          <svg>
            cart.svg
          </svg>
        </div>
      </a>
      <div
        class="sc-dQppl ggLoGe"
        data-testid="LoggedInLinks-user-box"
        id="user"
      >
        <span
          class="sc-gKsewC kqhhoC"
          color=""
          display="inline-block"
          overflow="hidden"
          size="3"
          spacing="0px"
          transform=""
        >
          username
        </span>
        <div
          class="sc-fubCfw koNpdQ"
          color=""
        >
          <svg>
            arrow.svg
          </svg>
        </div>
        <div />
      </div>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`<Navbar /> Should render <LoggedOutLinks /> if user is logged out 1`] = `
<DocumentFragment>
  <header
    class="sc-bdfBwQ btxKQt"
  >
    <a
      data-testid="Navbar-header-link"
    >
      <header
        class="header"
      >
        <img
          alt="E-Shopping"
          class="logo"
          src="logo.png"
        />
        <h1
          class="sc-gsTCUz gJcZNp heading"
        >
          shopping
        </h1>
      </header>
    </a>
    <form
      class="sc-dlfnbm cjBYFJ"
    >
      <input
        autocomplete="off"
        class="name-input"
        maxlength="150"
        name="product"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        class="sc-hKgILt fbPnWM"
        color="blue"
        type="submit"
      >
        search
      </button>
    </form>
    <div
      class="sc-pFZIQ iLRtPl"
      direction="row"
      spacing="3"
      width="auto"
      wrap="nowrap"
    >
      <button
        class="sc-hKgILt dNINNA"
        color="blue"
        type="button"
      >
        login
      </button>
      <button
        class="sc-hKgILt fbPnWM"
        color="blue"
        type="button"
      >
        signup
      </button>
    </div>
  </header>
</DocumentFragment>
`;
